# claude-marketplace

./: CHANGELOG.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
plugins/.claude-plugin/: plugin.json
plugins/changelog/: CONTEXT.md  README.md
plugins/changelog/.claude-plugin/: plugin.json
plugins/changelog/agents/: changelog-writer.md
plugins/changelog/commands/: changelog-add.md  changelog-init.md  changelog-view.md
plugins/changelog/hooks/: check-changelog-before-commit.py  hooks.json
plugins/rust-data-engineering/: CONTEXT.md  README.md
plugins/rust-data-engineering/agents/: data-engineering-expert.md
plugins/rust-data-engineering/commands/: data-datafusion-query.md  data-iceberg-table.md  data-object-store-setup.md  data-parquet-read.md  data-parquet-write.md
plugins/rust-error-handling/: CONTEXT.md  README.md
plugins/rust-error-handling/agents/: rust-error-expert.md
plugins/rust-hexagonal/: CONTEXT.md  README.md
plugins/rust-lambda/: CONTEXT.md  README.md
plugins/rust-mcp-server/: CONTEXT.md  README.md
plugins/rust-modern-patterns/: CONTEXT.md  README.md
plugins/rust-testing/: CONTEXT.md  README.md
url-shortener/: Cargo.toml  README.md
url-shortener/src/: error.rs  lib.rs
url-shortener/src/adapters/: in_memory_repository.rs  mod.rs  random_id_generator.rs
url-shortener/src/domain/: mod.rs  original_url.rs  short_code.rs  shortened_url.rs  url_id.rs
url-shortener/src/ports/: id_generator.rs  mod.rs  repository.rs
url-shortener/src/service/: mod.rs  url_shortener_service.rs
(+37 files in other folders)
